hphp/test/zend/good/ext-standard-array/bug33382.php
<?php

$array = array(1,2,3,4,5);

sort($array);

var_dump(array_reverse($array));

echo "Done\n";
?>